sintax_analizer.output
Terminales no usados en la gramática

    NULL_KW
    LEFT_SQUARE
    RIGHT_SQUARE
    DOT


Gramática

    0 $accept: in $end

    1 in: ε
    2   | in line

    3 line: EOL
    4     | exp EOL

    5 exp: instance
    6    | function
    7    | inc_dec
    8    | func_call
    9    | asingn

   10 function: func_dec std_blck_d

   11 $@1: ε

   12 std_blck_d: LEFT_BRACKET $@1 block RIGHT_BRACKET

   13 func_dec: FUNCTION_KW IDENTIFIER func_params func_type

   14 block: ε
   15      | block block_line

   16 block_line: EOL
   17           | block_exp EOL

   18 block_exp: instance
   19          | BREAK_KW
   20          | inc_dec
   21          | func_call
   22          | asingn
   23          | loop
   24          | conditional
   25          | exception
   26          | rtrn
   27          | throw

   28 rtrn: RETURN_KW exp_op
   29     | RETURN_KW

   30 throw: THROW_KW IDENTIFIER LEFT_PARENT STRING RIGHT_PARENT
   31      | THROW_KW IDENTIFIER LEFT_PARENT RIGHT_PARENT

   32 loop: FOR_KW LEFT_PARENT RIGHT_PARENT std_blck_d
   33     | while_exp std_blck_d
   34     | DO_KW std_blck_d while_exp

   35 while_exp: WHILE_KW LEFT_PARENT exp_op RIGHT_PARENT

   36 conditional: if_els_stmt
   37            | switch_stmt

   38 if_els_stmt: if_stmt
   39            | if_stmt else_stmt
   40            | if_stmt els_if_stmt

   41 $@2: ε

   42 if_stmt: IF_KW LEFT_PARENT exp_op $@2 RIGHT_PARENT std_blck_d

   43 else_stmt: ELSE_KW std_blck_d

   44 els_if_stmt: ELSE_KW if_stmt
   45            | els_if_stmt ELSE_KW if_stmt
   46            | els_if_stmt else_stmt

   47 $@3: ε

   48 switch_stmt: SWITCH_KW LEFT_PARENT exp_op RIGHT_PARENT LEFT_BRACKET EOL switch_block $@3 RIGHT_BRACKET
   49            | SWITCH_KW LEFT_PARENT exp_op RIGHT_PARENT LEFT_BRACKET EOL RIGHT_BRACKET

   50 switch_block: switch_line
   51             | switch_block switch_line

   52 $@4: ε

   53 switch_line: CASE_KW exp_op COLON $@4 block

   54 $@5: ε

   55 switch_line: DEFAULT_KW COLON $@5 block

   56 exception: try_catch
   57          | try_catch FINALLY_KW LEFT_BRACKET block RIGHT_BRACKET

   58 try_catch: TRY_KW LEFT_BRACKET block RIGHT_BRACKET CATCH_KW LEFT_PARENT IDENTIFIER RIGHT_PARENT LEFT_BRACKET block RIGHT_BRACKET

   59 func_type: COLON type
   60          | COLON VOID_KW

   61 func_params: LEFT_PARENT params_sec RIGHT_PARENT
   62            | LEFT_PARENT RIGHT_PARENT

   63 params_sec: param
   64           | param COMMA params_sec
   65           | param COMMA EOL params_sec

   66 param: IDENTIFIER COLON type
   67      | IDENTIFIER COLON type OP_ASSIGN exp_op

   68 instance: inst_id
   69         | inst_id OP_ASSIGN exp_op

   70 inst_id: type IDENTIFIER

   71 type: CHAR_KW
   72     | INT_KW
   73     | FLOAT_KW
   74     | BOOL_KW
   75     | STRING_KW

   76 value_data: CHAR
   77           | NUM
   78           | NUM_DEC
   79           | TRUE_KW
   80           | FALSE_KW
   81           | STRING
   82           | var_value

   83 var_value: IDENTIFIER
   84          | D_COLON IDENTIFIER

   85 exp_op: exp_op OP_ADD exp_op
   86       | exp_op OP_SUB exp_op
   87       | exp_op OP_MUL exp_op
   88       | exp_op OP_DIV exp_op
   89       | exp_op OP_MOD exp_op
   90       | OP_SUB exp_op
   91       | exp_op OP_GT exp_op
   92       | exp_op OP_LT exp_op
   93       | exp_op OP_GTE exp_op
   94       | exp_op OP_LTE exp_op
   95       | exp_op OP_EQ exp_op
   96       | exp_op OP_NEQ exp_op
   97       | exp_op OP_AND exp_op
   98       | exp_op OP_OR exp_op
   99       | OP_NOT exp_op
  100       | var_value OP_ASSIGN exp_op
  101       | var_value OP_ADD_ASSIGN exp_op
  102       | var_value OP_SUB_ASSIGN exp_op
  103       | var_value OP_MUL_ASSIGN exp_op
  104       | var_value OP_DIV_ASSIGN exp_op
  105       | var_value OP_MOD_ASSIGN exp_op
  106       | LEFT_PARENT exp_op RIGHT_PARENT
  107       | value_data
  108       | func_call
  109       | inc_dec

  110 inc_dec: var_value ops_inc_dec
  111        | ops_inc_dec var_value

  112 ops_inc_dec: OP_INC
  113            | OP_DEC

  114 func_call: IDENTIFIER LEFT_PARENT RIGHT_PARENT
  115          | IDENTIFIER LEFT_PARENT func_args RIGHT_PARENT

  116 func_args: func_arg
  117          | func_arg COMMA func_args
  118          | func_arg COMMA EOL func_args

  119 func_arg: IDENTIFIER COLON exp_op
  120         | exp_op

  121 asingn: var_value OP_ASSIGN exp_op
  122       | var_value OP_ADD_ASSIGN exp_op
  123       | var_value ops_assign exp_op

  124 ops_assign: OP_SUB_ASSIGN
  125           | OP_MUL_ASSIGN
  126           | OP_DIV_ASSIGN
  127           | OP_MOD_ASSIGN


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    CHAR_KW (258) 71
    INT_KW (259) 72
    FLOAT_KW (260) 73
    BOOL_KW (261) 74
    STRING_KW (262) 75
    VOID_KW (263) 60
    IF_KW (264) 42
    ELSE_KW (265) 43 44 45
    SWITCH_KW (266) 48 49
    CASE_KW (267) 53
    DEFAULT_KW (268) 55
    FOR_KW (269) 32
    WHILE_KW (270) 35
    DO_KW (271) 34
    BREAK_KW (272) 19
    RETURN_KW (273) 28 29
    TRUE_KW (274) 79
    FALSE_KW (275) 80
    FUNCTION_KW (276) 13
    TRY_KW (277) 58
    CATCH_KW (278) 58
    FINALLY_KW (279) 57
    THROW_KW (280) 30 31
    NULL_KW (281)
    OP_INC (282) 112
    OP_DEC (283) 113
    OP_ADD (284) 85
    OP_SUB (285) 86 90
    OP_MUL (286) 87
    OP_DIV (287) 88
    OP_MOD (288) 89
    OP_AND (289) 97
    OP_OR (290) 98
    OP_NOT (291) 99
    OP_EQ (292) 95
    OP_NEQ (293) 96
    OP_GT (294) 91
    OP_LT (295) 92
    OP_GTE (296) 93
    OP_LTE (297) 94
    OP_ASSIGN (298) 67 69 100 121
    OP_ADD_ASSIGN (299) 101 122
    OP_SUB_ASSIGN (300) 102 124
    OP_MUL_ASSIGN (301) 103 125
    OP_DIV_ASSIGN (302) 104 126
    OP_MOD_ASSIGN (303) 105 127
    UMINUS (304)
    LEFT_PARENT (305) 30 31 32 35 42 48 49 58 61 62 106 114 115
    RIGHT_PARENT (306) 30 31 32 35 42 48 49 58 61 62 106 114 115
    LEFT_BRACKET (307) 12 48 49 57 58
    RIGHT_BRACKET (308) 12 48 49 57 58
    LEFT_SQUARE (309)
    RIGHT_SQUARE (310)
    COMMA (311) 64 65 117 118
    DOT (312)
    D_COLON (313) 84
    COLON (314) 53 55 59 60 66 67 119
    CHAR <ival> (315) 76
    STRING <ival> (316) 30 81
    NUM <ival> (317) 77
    NUM_DEC <ival> (318) 78
    IDENTIFIER <sval> (319) 13 30 31 58 66 67 70 83 84 114 115 119
    EOL (320) 3 4 16 17 48 49 65 118


No terminales con las reglas donde aparecen

    $accept (66)
        on left: 0
    in (67)
        on left: 1 2
        on right: 0 2
    line (68)
        on left: 3 4
        on right: 2
    exp (69)
        on left: 5 6 7 8 9
        on right: 4
    function (70)
        on left: 10
        on right: 6
    std_blck_d (71)
        on left: 12
        on right: 10 32 33 34 42 43
    $@1 (72)
        on left: 11
        on right: 12
    func_dec (73)
        on left: 13
        on right: 10
    block (74)
        on left: 14 15
        on right: 12 15 53 55 57 58
    block_line (75)
        on left: 16 17
        on right: 15
    block_exp (76)
        on left: 18 19 20 21 22 23 24 25 26 27
        on right: 17
    rtrn <ival> (77)
        on left: 28 29
        on right: 26
    throw (78)
        on left: 30 31
        on right: 27
    loop (79)
        on left: 32 33 34
        on right: 23
    while_exp (80)
        on left: 35
        on right: 33 34
    conditional (81)
        on left: 36 37
        on right: 24
    if_els_stmt (82)
        on left: 38 39 40
        on right: 36
    if_stmt (83)
        on left: 42
        on right: 38 39 40 44 45
    $@2 (84)
        on left: 41
        on right: 42
    else_stmt (85)
        on left: 43
        on right: 39 46
    els_if_stmt (86)
        on left: 44 45 46
        on right: 40 45 46
    switch_stmt (87)
        on left: 48 49
        on right: 37
    $@3 (88)
        on left: 47
        on right: 48
    switch_block <ival> (89)
        on left: 50 51
        on right: 48 51
    switch_line <ival> (90)
        on left: 53 55
        on right: 50 51
    $@4 (91)
        on left: 52
        on right: 53
    $@5 (92)
        on left: 54
        on right: 55
    exception (93)
        on left: 56 57
        on right: 25
    try_catch (94)
        on left: 58
        on right: 56 57
    func_type <ival> (95)
        on left: 59 60
        on right: 13
    func_params (96)
        on left: 61 62
        on right: 13
    params_sec (97)
        on left: 63 64 65
        on right: 61 64 65
    param (98)
        on left: 66 67
        on right: 63 64 65
    instance (99)
        on left: 68 69
        on right: 5 18
    inst_id <ival> (100)
        on left: 70
        on right: 68 69
    type <ival> (101)
        on left: 71 72 73 74 75
        on right: 59 66 67 70
    value_data <ival> (102)
        on left: 76 77 78 79 80 81 82
        on right: 107
    var_value <ival> (103)
        on left: 83 84
        on right: 82 100 101 102 103 104 105 110 111 121 122 123
    exp_op <ival> (104)
        on left: 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109
        on right: 28 35 42 48 49 53 67 69 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 119 120 121 122 123
    inc_dec <ival> (105)
        on left: 110 111
        on right: 7 20 109
    ops_inc_dec (106)
        on left: 112 113
        on right: 110 111
    func_call <ival> (107)
        on left: 114 115
        on right: 8 21 108
    func_args (108)
        on left: 116 117 118
        on right: 115 117 118
    func_arg (109)
        on left: 119 120
        on right: 116 117 118
    asingn (110)
        on left: 121 122 123
        on right: 9 22
    ops_assign (111)
        on left: 124 125 126 127
        on right: 123


Estado 0

    0 $accept: • in $end

    $default  reduce usando la regla 1 (in)

    in  ir al estado 1


Estado 1

    0 $accept: in • $end
    2 in: in • line

    $end         desplazar e ir al estado 2
    CHAR_KW      desplazar e ir al estado 3
    INT_KW       desplazar e ir al estado 4
    FLOAT_KW     desplazar e ir al estado 5
    BOOL_KW      desplazar e ir al estado 6
    STRING_KW    desplazar e ir al estado 7
    FUNCTION_KW  desplazar e ir al estado 8
    OP_INC       desplazar e ir al estado 9
    OP_DEC       desplazar e ir al estado 10
    D_COLON      desplazar e ir al estado 11
    IDENTIFIER   desplazar e ir al estado 12
    EOL          desplazar e ir al estado 13

    line         ir al estado 14
    exp          ir al estado 15
    function     ir al estado 16
    func_dec     ir al estado 17
    instance     ir al estado 18
    inst_id      ir al estado 19
    type         ir al estado 20
    var_value    ir al estado 21
    inc_dec      ir al estado 22
    ops_inc_dec  ir al estado 23
    func_call    ir al estado 24
    asingn       ir al estado 25


Estado 2

    0 $accept: in $end •

    $default  aceptar


Estado 3

   71 type: CHAR_KW •

    $default  reduce usando la regla 71 (type)


Estado 4

   72 type: INT_KW •

    $default  reduce usando la regla 72 (type)


Estado 5

   73 type: FLOAT_KW •

    $default  reduce usando la regla 73 (type)


Estado 6

   74 type: BOOL_KW •

    $default  reduce usando la regla 74 (type)


Estado 7

   75 type: STRING_KW •

    $default  reduce usando la regla 75 (type)


Estado 8

   13 func_dec: FUNCTION_KW • IDENTIFIER func_params func_type

    IDENTIFIER  desplazar e ir al estado 26


Estado 9

  112 ops_inc_dec: OP_INC •

    $default  reduce usando la regla 112 (ops_inc_dec)


Estado 10

  113 ops_inc_dec: OP_DEC •

    $default  reduce usando la regla 113 (ops_inc_dec)


Estado 11

   84 var_value: D_COLON • IDENTIFIER

    IDENTIFIER  desplazar e ir al estado 27


Estado 12

   83 var_value: IDENTIFIER •
  114 func_call: IDENTIFIER • LEFT_PARENT RIGHT_PARENT
  115          | IDENTIFIER • LEFT_PARENT func_args RIGHT_PARENT

    LEFT_PARENT  desplazar e ir al estado 28

    $default  reduce usando la regla 83 (var_value)


Estado 13

    3 line: EOL •

    $default  reduce usando la regla 3 (line)


Estado 14

    2 in: in line •

    $default  reduce usando la regla 2 (in)


Estado 15

    4 line: exp • EOL

    EOL  desplazar e ir al estado 29


Estado 16

    6 exp: function •

    $default  reduce usando la regla 6 (exp)


Estado 17

   10 function: func_dec • std_blck_d

    LEFT_BRACKET  desplazar e ir al estado 30

    std_blck_d  ir al estado 31


Estado 18

    5 exp: instance •

    $default  reduce usando la regla 5 (exp)


Estado 19

   68 instance: inst_id •
   69         | inst_id • OP_ASSIGN exp_op

    OP_ASSIGN  desplazar e ir al estado 32

    $default  reduce usando la regla 68 (instance)


Estado 20

   70 inst_id: type • IDENTIFIER

    IDENTIFIER  desplazar e ir al estado 33


Estado 21

  110 inc_dec: var_value • ops_inc_dec
  121 asingn: var_value • OP_ASSIGN exp_op
  122       | var_value • OP_ADD_ASSIGN exp_op
  123       | var_value • ops_assign exp_op

    OP_INC         desplazar e ir al estado 9
    OP_DEC         desplazar e ir al estado 10
    OP_ASSIGN      desplazar e ir al estado 34
    OP_ADD_ASSIGN  desplazar e ir al estado 35
    OP_SUB_ASSIGN  desplazar e ir al estado 36
    OP_MUL_ASSIGN  desplazar e ir al estado 37
    OP_DIV_ASSIGN  desplazar e ir al estado 38
    OP_MOD_ASSIGN  desplazar e ir al estado 39

    ops_inc_dec  ir al estado 40
    ops_assign   ir al estado 41


Estado 22

    7 exp: inc_dec •

    $default  reduce usando la regla 7 (exp)


Estado 23

  111 inc_dec: ops_inc_dec • var_value

    D_COLON     desplazar e ir al estado 11
    IDENTIFIER  desplazar e ir al estado 42

    var_value  ir al estado 43


Estado 24

    8 exp: func_call •

    $default  reduce usando la regla 8 (exp)


Estado 25

    9 exp: asingn •

    $default  reduce usando la regla 9 (exp)


Estado 26

   13 func_dec: FUNCTION_KW IDENTIFIER • func_params func_type

    LEFT_PARENT  desplazar e ir al estado 44

    func_params  ir al estado 45


Estado 27

   84 var_value: D_COLON IDENTIFIER •

    $default  reduce usando la regla 84 (var_value)


Estado 28

  114 func_call: IDENTIFIER LEFT_PARENT • RIGHT_PARENT
  115          | IDENTIFIER LEFT_PARENT • func_args RIGHT_PARENT

    TRUE_KW       desplazar e ir al estado 46
    FALSE_KW      desplazar e ir al estado 47
    OP_INC        desplazar e ir al estado 9
    OP_DEC        desplazar e ir al estado 10
    OP_SUB        desplazar e ir al estado 48
    OP_NOT        desplazar e ir al estado 49
    LEFT_PARENT   desplazar e ir al estado 50
    RIGHT_PARENT  desplazar e ir al estado 51
    D_COLON       desplazar e ir al estado 11
    CHAR          desplazar e ir al estado 52
    STRING        desplazar e ir al estado 53
    NUM           desplazar e ir al estado 54
    NUM_DEC       desplazar e ir al estado 55
    IDENTIFIER    desplazar e ir al estado 56

    value_data   ir al estado 57
    var_value    ir al estado 58
    exp_op       ir al estado 59
    inc_dec      ir al estado 60
    ops_inc_dec  ir al estado 23
    func_call    ir al estado 61
    func_args    ir al estado 62
    func_arg     ir al estado 63


Estado 29

    4 line: exp EOL •

    $default  reduce usando la regla 4 (line)


Estado 30

   12 std_blck_d: LEFT_BRACKET • $@1 block RIGHT_BRACKET

    $default  reduce usando la regla 11 ($@1)

    $@1  ir al estado 64


Estado 31

   10 function: func_dec std_blck_d •

    $default  reduce usando la regla 10 (function)


Estado 32

   69 instance: inst_id OP_ASSIGN • exp_op

    TRUE_KW      desplazar e ir al estado 46
    FALSE_KW     desplazar e ir al estado 47
    OP_INC       desplazar e ir al estado 9
    OP_DEC       desplazar e ir al estado 10
    OP_SUB       desplazar e ir al estado 48
    OP_NOT       desplazar e ir al estado 49
    LEFT_PARENT  desplazar e ir al estado 50
    D_COLON      desplazar e ir al estado 11
    CHAR         desplazar e ir al estado 52
    STRING       desplazar e ir al estado 53
    NUM          desplazar e ir al estado 54
    NUM_DEC      desplazar e ir al estado 55
    IDENTIFIER   desplazar e ir al estado 12

    value_data   ir al estado 57
    var_value    ir al estado 58
    exp_op       ir al estado 65
    inc_dec      ir al estado 60
    ops_inc_dec  ir al estado 23
    func_call    ir al estado 61


Estado 33

   70 inst_id: type IDENTIFIER •

    $default  reduce usando la regla 70 (inst_id)


Estado 34

  121 asingn: var_value OP_ASSIGN • exp_op

    TRUE_KW      desplazar e ir al estado 46
    FALSE_KW     desplazar e ir al estado 47
    OP_INC       desplazar e ir al estado 9
    OP_DEC       desplazar e ir al estado 10
    OP_SUB       desplazar e ir al estado 48
    OP_NOT       desplazar e ir al estado 49
    LEFT_PARENT  desplazar e ir al estado 50
    D_COLON      desplazar e ir al estado 11
    CHAR         desplazar e ir al estado 52
    STRING       desplazar e ir al estado 53
    NUM          desplazar e ir al estado 54
    NUM_DEC      desplazar e ir al estado 55
    IDENTIFIER   desplazar e ir al estado 12

    value_data   ir al estado 57
    var_value    ir al estado 58
    exp_op       ir al estado 66
    inc_dec      ir al estado 60
    ops_inc_dec  ir al estado 23
    func_call    ir al estado 61


Estado 35

  122 asingn: var_value OP_ADD_ASSIGN • exp_op

    TRUE_KW      desplazar e ir al estado 46
    FALSE_KW     desplazar e ir al estado 47
    OP_INC       desplazar e ir al estado 9
    OP_DEC       desplazar e ir al estado 10
    OP_SUB       desplazar e ir al estado 48
    OP_NOT       desplazar e ir al estado 49
    LEFT_PARENT  desplazar e ir al estado 50
    D_COLON      desplazar e ir al estado 11
    CHAR         desplazar e ir al estado 52
    STRING       desplazar e ir al estado 53
    NUM          desplazar e ir al estado 54
    NUM_DEC      desplazar e ir al estado 55
    IDENTIFIER   desplazar e ir al estado 12

    value_data   ir al estado 57
    var_value    ir al estado 58
    exp_op       ir al estado 67
    inc_dec      ir al estado 60
    ops_inc_dec  ir al estado 23
    func_call    ir al estado 61


Estado 36

  124 ops_assign: OP_SUB_ASSIGN •

    $default  reduce usando la regla 124 (ops_assign)


Estado 37

  125 ops_assign: OP_MUL_ASSIGN •

    $default  reduce usando la regla 125 (ops_assign)


Estado 38

  126 ops_assign: OP_DIV_ASSIGN •

    $default  reduce usando la regla 126 (ops_assign)


Estado 39

  127 ops_assign: OP_MOD_ASSIGN •

    $default  reduce usando la regla 127 (ops_assign)


Estado 40

  110 inc_dec: var_value ops_inc_dec •

    $default  reduce usando la regla 110 (inc_dec)


Estado 41

  123 asingn: var_value ops_assign • exp_op

    TRUE_KW      desplazar e ir al estado 46
    FALSE_KW     desplazar e ir al estado 47
    OP_INC       desplazar e ir al estado 9
    OP_DEC       desplazar e ir al estado 10
    OP_SUB       desplazar e ir al estado 48
    OP_NOT       desplazar e ir al estado 49
    LEFT_PARENT  desplazar e ir al estado 50
    D_COLON      desplazar e ir al estado 11
    CHAR         desplazar e ir al estado 52
    STRING       desplazar e ir al estado 53
    NUM          desplazar e ir al estado 54
    NUM_DEC      desplazar e ir al estado 55
    IDENTIFIER   desplazar e ir al estado 12

    value_data   ir al estado 57
    var_value    ir al estado 58
    exp_op       ir al estado 68
    inc_dec      ir al estado 60
    ops_inc_dec  ir al estado 23
    func_call    ir al estado 61


Estado 42

   83 var_value: IDENTIFIER •

    $default  reduce usando la regla 83 (var_value)


Estado 43

  111 inc_dec: ops_inc_dec var_value •

    $default  reduce usando la regla 111 (inc_dec)


Estado 44

   61 func_params: LEFT_PARENT • params_sec RIGHT_PARENT
   62            | LEFT_PARENT • RIGHT_PARENT

    RIGHT_PARENT  desplazar e ir al estado 69
    IDENTIFIER    desplazar e ir al estado 70

    params_sec  ir al estado 71
    param       ir al estado 72


Estado 45

   13 func_dec: FUNCTION_KW IDENTIFIER func_params • func_type

    COLON  desplazar e ir al estado 73

    func_type  ir al estado 74


Estado 46

   79 value_data: TRUE_KW •

    $default  reduce usando la regla 79 (value_data)


Estado 47

   80 value_data: FALSE_KW •

    $default  reduce usando la regla 80 (value_data)


Estado 48

   90 exp_op: OP_SUB • exp_op

    TRUE_KW      desplazar e ir al estado 46
    FALSE_KW     desplazar e ir al estado 47
    OP_INC       desplazar e ir al estado 9
    OP_DEC       desplazar e ir al estado 10
    OP_SUB       desplazar e ir al estado 48
    OP_NOT       desplazar e ir al estado 49
    LEFT_PARENT  desplazar e ir al estado 50
    D_COLON      desplazar e ir al estado 11
    CHAR         desplazar e ir al estado 52
    STRING       desplazar e ir al estado 53
    NUM          desplazar e ir al estado 54
    NUM_DEC      desplazar e ir al estado 55
    IDENTIFIER   desplazar e ir al estado 12

    value_data   ir al estado 57
    var_value    ir al estado 58
    exp_op       ir al estado 75
    inc_dec      ir al estado 60
    ops_inc_dec  ir al estado 23
    func_call    ir al estado 61


Estado 49

   99 exp_op: OP_NOT • exp_op

    TRUE_KW      desplazar e ir al estado 46
    FALSE_KW     desplazar e ir al estado 47
    OP_INC       desplazar e ir al estado 9
    OP_DEC       desplazar e ir al estado 10
    OP_SUB       desplazar e ir al estado 48
    OP_NOT       desplazar e ir al estado 49
    LEFT_PARENT  desplazar e ir al estado 50
    D_COLON      desplazar e ir al estado 11
    CHAR         desplazar e ir al estado 52
    STRING       desplazar e ir al estado 53
    NUM          desplazar e ir al estado 54
    NUM_DEC      desplazar e ir al estado 55
    IDENTIFIER   desplazar e ir al estado 12

    value_data   ir al estado 57
    var_value    ir al estado 58
    exp_op       ir al estado 76
    inc_dec      ir al estado 60
    ops_inc_dec  ir al estado 23
    func_call    ir al estado 61


Estado 50

  106 exp_op: LEFT_PARENT • exp_op RIGHT_PARENT

    TRUE_KW      desplazar e ir al estado 46
    FALSE_KW     desplazar e ir al estado 47
    OP_INC       desplazar e ir al estado 9
    OP_DEC       desplazar e ir al estado 10
    OP_SUB       desplazar e ir al estado 48
    OP_NOT       desplazar e ir al estado 49
    LEFT_PARENT  desplazar e ir al estado 50
    D_COLON      desplazar e ir al estado 11
    CHAR         desplazar e ir al estado 52
    STRING       desplazar e ir al estado 53
    NUM          desplazar e ir al estado 54
    NUM_DEC      desplazar e ir al estado 55
    IDENTIFIER   desplazar e ir al estado 12

    value_data   ir al estado 57
    var_value    ir al estado 58
    exp_op       ir al estado 77
    inc_dec      ir al estado 60
    ops_inc_dec  ir al estado 23
    func_call    ir al estado 61


Estado 51

  114 func_call: IDENTIFIER LEFT_PARENT RIGHT_PARENT •

    $default  reduce usando la regla 114 (func_call)


Estado 52

   76 value_data: CHAR •

    $default  reduce usando la regla 76 (value_data)


Estado 53

   81 value_data: STRING •

    $default  reduce usando la regla 81 (value_data)


Estado 54

   77 value_data: NUM •

    $default  reduce usando la regla 77 (value_data)


Estado 55

   78 value_data: NUM_DEC •

    $default  reduce usando la regla 78 (value_data)


Estado 56

   83 var_value: IDENTIFIER •
  114 func_call: IDENTIFIER • LEFT_PARENT RIGHT_PARENT
  115          | IDENTIFIER • LEFT_PARENT func_args RIGHT_PARENT
  119 func_arg: IDENTIFIER • COLON exp_op

    LEFT_PARENT  desplazar e ir al estado 28
    COLON        desplazar e ir al estado 78

    $default  reduce usando la regla 83 (var_value)


Estado 57

  107 exp_op: value_data •

    $default  reduce usando la regla 107 (exp_op)


Estado 58

   82 value_data: var_value •
  100 exp_op: var_value • OP_ASSIGN exp_op
  101       | var_value • OP_ADD_ASSIGN exp_op
  102       | var_value • OP_SUB_ASSIGN exp_op
  103       | var_value • OP_MUL_ASSIGN exp_op
  104       | var_value • OP_DIV_ASSIGN exp_op
  105       | var_value • OP_MOD_ASSIGN exp_op
  110 inc_dec: var_value • ops_inc_dec

    OP_INC         desplazar e ir al estado 9
    OP_DEC         desplazar e ir al estado 10
    OP_ASSIGN      desplazar e ir al estado 79
    OP_ADD_ASSIGN  desplazar e ir al estado 80
    OP_SUB_ASSIGN  desplazar e ir al estado 81
    OP_MUL_ASSIGN  desplazar e ir al estado 82
    OP_DIV_ASSIGN  desplazar e ir al estado 83
    OP_MOD_ASSIGN  desplazar e ir al estado 84

    $default  reduce usando la regla 82 (value_data)

    ops_inc_dec  ir al estado 40


Estado 59

   85 exp_op: exp_op • OP_ADD exp_op
   86       | exp_op • OP_SUB exp_op
   87       | exp_op • OP_MUL exp_op
   88       | exp_op • OP_DIV exp_op
   89       | exp_op • OP_MOD exp_op
   91       | exp_op • OP_GT exp_op
   92       | exp_op • OP_LT exp_op
   93       | exp_op • OP_GTE exp_op
   94       | exp_op • OP_LTE exp_op
   95       | exp_op • OP_EQ exp_op
   96       | exp_op • OP_NEQ exp_op
   97       | exp_op • OP_AND exp_op
   98       | exp_op • OP_OR exp_op
  120 func_arg: exp_op •

    OP_ADD  desplazar e ir al estado 85
    OP_SUB  desplazar e ir al estado 86
    OP_MUL  desplazar e ir al estado 87
    OP_DIV  desplazar e ir al estado 88
    OP_MOD  desplazar e ir al estado 89
    OP_AND  desplazar e ir al estado 90
    OP_OR   desplazar e ir al estado 91
    OP_EQ   desplazar e ir al estado 92
    OP_NEQ  desplazar e ir al estado 93
    OP_GT   desplazar e ir al estado 94
    OP_LT   desplazar e ir al estado 95
    OP_GTE  desplazar e ir al estado 96
    OP_LTE  desplazar e ir al estado 97

    $default  reduce usando la regla 120 (func_arg)


Estado 60

  109 exp_op: inc_dec •

    $default  reduce usando la regla 109 (exp_op)


Estado 61

  108 exp_op: func_call •

    $default  reduce usando la regla 108 (exp_op)


Estado 62

  115 func_call: IDENTIFIER LEFT_PARENT func_args • RIGHT_PARENT

    RIGHT_PARENT  desplazar e ir al estado 98


Estado 63

  116 func_args: func_arg •
  117          | func_arg • COMMA func_args
  118          | func_arg • COMMA EOL func_args

    COMMA  desplazar e ir al estado 99

    $default  reduce usando la regla 116 (func_args)


Estado 64

   12 std_blck_d: LEFT_BRACKET $@1 • block RIGHT_BRACKET

    $default  reduce usando la regla 14 (block)

    block  ir al estado 100


Estado 65

   69 instance: inst_id OP_ASSIGN exp_op •
   85 exp_op: exp_op • OP_ADD exp_op
   86       | exp_op • OP_SUB exp_op
   87       | exp_op • OP_MUL exp_op
   88       | exp_op • OP_DIV exp_op
   89       | exp_op • OP_MOD exp_op
   91       | exp_op • OP_GT exp_op
   92       | exp_op • OP_LT exp_op
   93       | exp_op • OP_GTE exp_op
   94       | exp_op • OP_LTE exp_op
   95       | exp_op • OP_EQ exp_op
   96       | exp_op • OP_NEQ exp_op
   97       | exp_op • OP_AND exp_op
   98       | exp_op • OP_OR exp_op

    OP_ADD  desplazar e ir al estado 85
    OP_SUB  desplazar e ir al estado 86
    OP_MUL  desplazar e ir al estado 87
    OP_DIV  desplazar e ir al estado 88
    OP_MOD  desplazar e ir al estado 89
    OP_AND  desplazar e ir al estado 90
    OP_OR   desplazar e ir al estado 91
    OP_EQ   desplazar e ir al estado 92
    OP_NEQ  desplazar e ir al estado 93
    OP_GT   desplazar e ir al estado 94
    OP_LT   desplazar e ir al estado 95
    OP_GTE  desplazar e ir al estado 96
    OP_LTE  desplazar e ir al estado 97

    $default  reduce usando la regla 69 (instance)


Estado 66

   85 exp_op: exp_op • OP_ADD exp_op
   86       | exp_op • OP_SUB exp_op
   87       | exp_op • OP_MUL exp_op
   88       | exp_op • OP_DIV exp_op
   89       | exp_op • OP_MOD exp_op
   91       | exp_op • OP_GT exp_op
   92       | exp_op • OP_LT exp_op
   93       | exp_op • OP_GTE exp_op
   94       | exp_op • OP_LTE exp_op
   95       | exp_op • OP_EQ exp_op
   96       | exp_op • OP_NEQ exp_op
   97       | exp_op • OP_AND exp_op
   98       | exp_op • OP_OR exp_op
  121 asingn: var_value OP_ASSIGN exp_op •

    OP_ADD  desplazar e ir al estado 85
    OP_SUB  desplazar e ir al estado 86
    OP_MUL  desplazar e ir al estado 87
    OP_DIV  desplazar e ir al estado 88
    OP_MOD  desplazar e ir al estado 89
    OP_AND  desplazar e ir al estado 90
    OP_OR   desplazar e ir al estado 91
    OP_EQ   desplazar e ir al estado 92
    OP_NEQ  desplazar e ir al estado 93
    OP_GT   desplazar e ir al estado 94
    OP_LT   desplazar e ir al estado 95
    OP_GTE  desplazar e ir al estado 96
    OP_LTE  desplazar e ir al estado 97

    $default  reduce usando la regla 121 (asingn)


Estado 67

   85 exp_op: exp_op • OP_ADD exp_op
   86       | exp_op • OP_SUB exp_op
   87       | exp_op • OP_MUL exp_op
   88       | exp_op • OP_DIV exp_op
   89       | exp_op • OP_MOD exp_op
   91       | exp_op • OP_GT exp_op
   92       | exp_op • OP_LT exp_op
   93       | exp_op • OP_GTE exp_op
   94       | exp_op • OP_LTE exp_op
   95       | exp_op • OP_EQ exp_op
   96       | exp_op • OP_NEQ exp_op
   97       | exp_op • OP_AND exp_op
   98       | exp_op • OP_OR exp_op
  122 asingn: var_value OP_ADD_ASSIGN exp_op •

    OP_ADD  desplazar e ir al estado 85
    OP_SUB  desplazar e ir al estado 86
    OP_MUL  desplazar e ir al estado 87
    OP_DIV  desplazar e ir al estado 88
    OP_MOD  desplazar e ir al estado 89
    OP_AND  desplazar e ir al estado 90
    OP_OR   desplazar e ir al estado 91
    OP_EQ   desplazar e ir al estado 92
    OP_NEQ  desplazar e ir al estado 93
    OP_GT   desplazar e ir al estado 94
    OP_LT   desplazar e ir al estado 95
    OP_GTE  desplazar e ir al estado 96
    OP_LTE  desplazar e ir al estado 97

    $default  reduce usando la regla 122 (asingn)


Estado 68

   85 exp_op: exp_op • OP_ADD exp_op
   86       | exp_op • OP_SUB exp_op
   87       | exp_op • OP_MUL exp_op
   88       | exp_op • OP_DIV exp_op
   89       | exp_op • OP_MOD exp_op
   91       | exp_op • OP_GT exp_op
   92       | exp_op • OP_LT exp_op
   93       | exp_op • OP_GTE exp_op
   94       | exp_op • OP_LTE exp_op
   95       | exp_op • OP_EQ exp_op
   96       | exp_op • OP_NEQ exp_op
   97       | exp_op • OP_AND exp_op
   98       | exp_op • OP_OR exp_op
  123 asingn: var_value ops_assign exp_op •
